// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generates correct metadata for: dynamic route 1`] = `
{
  "canonical": undefined,
  "description": "View transaction 0x12345 on SyzykyScan (SyzykyScan) Explorer",
  "opengraph": {
    "description": "",
    "imageUrl": "",
    "title": "SyzykyScan transaction 0x12345 | SyzykyScan",
  },
  "title": "SyzykyScan transaction 0x12345 | SyzykyScan",
}
`;

exports[`generates correct metadata for: dynamic route with API data 1`] = `
{
  "canonical": undefined,
  "description": "0x12345, balances and analytics on the SyzykyScan (SyzykyScan) Explorer",
  "opengraph": {
    "description": "",
    "imageUrl": "",
    "title": "SyzykyScan USDT token details | SyzykyScan",
  },
  "title": "SyzykyScan USDT token details | SyzykyScan",
}
`;

exports[`generates correct metadata for: static route 1`] = `
{
  "canonical": "http://localhost:3000/txs",
  "description": "Open-source block explorer by SyzykyScan. Search transactions, verify smart contracts, analyze addresses, and track network activity. Complete blockchain data and APIs for the SyzykyScan (SyzykyScan) Explorer network.",
  "opengraph": {
    "description": "",
    "imageUrl": "http://localhost:3000/static/og_image.png",
    "title": "SyzykyScan transactions - SyzykyScan explorer | SyzykyScan",
  },
  "title": "SyzykyScan transactions - SyzykyScan explorer | SyzykyScan",
}
`;
